--- a/analysis/HousePriceRegressionAnalysis.tex
+++ b/analysis/HousePriceRegressionAnalysis.tex
@@ -93,6 +93,21 @@
   \postdate{\par}
     \date{Master of Science in Data Science, Southern Methodist University, USA}
 
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage[table]{xcolor}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
+
 \usepackage{amsmath}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -136,18 +151,29 @@ the question 2 variables?}
 \hypertarget{question-of-interest}{%
 \subsection{Question of Interest}\label{question-of-interest}}
 
-Restatement of the problem
+Century 21 has commissioned an analysis of this data to determine how
+the sale price of property is related to living room area of the
+property in the Edwards, Northwest Ames, and Brookside neighborhoods of
+Ames, IA.
 
 \hypertarget{modeling}{%
 \subsection{Modeling}\label{modeling}}
 
-TODO: Build and fit the model
+Linear regression will be used to model sale price as a response of the
+living room area. From the intial exploratory data analysis, it was
+determined that sale prices should be log transformed to meet the model
+assumptions \textbf{Add appendix reference}. Additionally, two
+observations were removed as they appeared to be from a different
+population than the other observations in the dataset \textbf{Add
+appendix reference}.
 
-We will consider two models: (1) the logarithm of sale price as the
-response of living room area and (2) the logarithm of sale price as the
-response of living room area accounting for differences in the three
-neighborhood of interest (Brookside, Northwest Ames, and Edwards) where
-Edwards will be used as the reference.
+We will consider two models: the logarithm of sale price as the response
+of living room area (1), the reduced model, and the logarithm of sale
+price as the response of living room area accounting for differences in
+the three neighborhood of interest (Brookside, Northwest Ames, and
+Edwards) where Edwards will be used as the reference (2), the full
+model. An extra sums of square (ESS) test will be used to verify that
+the addition of \texttt{Neighborhood} improves the model.
 
 \textbf{Reduced Model}
 
@@ -162,10 +188,9 @@ Edwards will be used as the reference.
 \beta_3(Brookside)(LivingRoomArea) + \beta_4(NorthwestAmes)(LivingRoomArea) \label{eq:full}
 \end{align}
 
-We will use an extra sums of square test to verify that the interaction
-terms are useful for the model. The ESS test provides convincing
-evidence that the interaction terms are useful for the model (p-value
-\textless{} 0.0001); thus, we will continue with the full model.
+The ESS test provides convincing evidence that the interaction terms are
+useful for the model (p-value \textless{} 0.0001); thus, we will
+continue with the full model.
 
 \begin{verbatim}
 ## Analysis of Variance Table
@@ -180,43 +205,65 @@ evidence that the interaction terms are useful for the model (p-value
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 \end{verbatim}
 
-\hypertarget{model-assumption-assessment}{%
-\subsection{Model Assumption
-Assessment}\label{model-assumption-assessment}}
+\hypertarget{model-assumptions-assessment}{%
+\subsection{Model Assumptions
+Assessment}\label{model-assumptions-assessment}}
 
-Address each assumption
+The following assessments for model assumptions are made based on Figure
+\ref{fig:diag-plots} and Figure 2 (\textbf{TODO}):
 
-\begin{center}\includegraphics{HousePriceRegressionAnalysis_files/figure-latex/diag-plots-1} \end{center}
+\begin{itemize}
+\tightlist
+\item
+  The residuals of the model appear to be approximately normally
+  distrubited based on the QQ plot of the residuals and histogram of the
+  residuals, suggesting the assumption of normality is met.
+\item
+  No patterns are evident in the scatter plots of residuals and
+  studentized residuals vs predicted value, suggesting the assumption of
+  constant variance is met.
+\item
+  While some observations appear to be influential and have high
+  leverage, removing these observations does not have a significant
+  impact on the result of the model fit.
+\item
+  Based on the scatter plot of the log transform of \texttt{SalePrice}
+  vs \texttt{GrLivArea}, it appears that a linear model is reasonable.
+\end{itemize}
+
+The sampling procedure is not known. We will assume the independence
+assumption is met.
+
+\begin{figure}[htbp]
+
+{\centering \includegraphics[width=0.45\linewidth]{HousePriceRegressionAnalysis_files/figure-latex/diag-plots-1} \includegraphics[width=0.45\linewidth]{HousePriceRegressionAnalysis_files/figure-latex/diag-plots-2} 
+
+}
+
+\caption{Diagnostic Plots}\label{fig:diag-plots}
+\end{figure}
 
 \hypertarget{comparing-competing-models}{%
 \subsection{Comparing Competing
 Models}\label{comparing-competing-models}}
 
-\begin{itemize}
-\tightlist
-\item
-  Adj \(R^2\)
-\item
-  CV Press
-\end{itemize}
+The two models were trained and validated on the training dataset using
+10-fold cross validation. The table below summerizes the performance of
+the models with RMSE, adjusted \(R^2\), and PRESS. These results show
+that the full model is an improvement over the reduced model, which is
+consistent with the result of the ESS test.
 
-\begin{table}[h]
+\begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|}
-\hline
-Model         & Adj $R^2$ & CV PRESS \\ \hline
-Reduced Model & 0.5       & 2000     \\ \hline
-Full Model    & 0.7       & 1500     \\ \hline
+\begin{tabular}{lrrr}
+\toprule
+Model & RMSE & CV.Press & Adjused.R.Squared\\
+\midrule
+Full Model & 0.1910566 & 12.51675 & 0.5084024\\
+Reduced Model & 0.1988473 & 13.55835 & 0.4750767\\
+\bottomrule
 \end{tabular}
 \end{table}
-
-\begin{tabular}{r|r|r}
-\hline
-RMSE & CV.Press & Adjused.R.Squared\\
-\hline
-0.1910566 & 12.51675 & 0.5084024\\
-\hline
-\end{tabular}
 
 \hypertarget{parameters}{%
 \subsection{Parameters}\label{parameters}}
@@ -224,12 +271,32 @@ RMSE & CV.Press & Adjused.R.Squared\\
 \begin{itemize}
 \tightlist
 \item
-  Estimates
+  Estimates \textbf{TODO}
 \item
-  Influential points
-\item
-  Residual plots
+  CI
 \end{itemize}
+
+\hypertarget{model-interpretation}{%
+\subsection{Model Interpretation}\label{model-interpretation}}
+
+We estimate that for increase in 100 sq. ft., there is associated
+multiplicative increase in median price of
+
+\begin{itemize}
+\tightlist
+\item
+  1.055 for the Edwards neighborhood with a 95\% confidence interval of
+  {[}1.044 , 1.066{]}
+\item
+  1.033 for the Northwest Ames neighorhood with a 95\% confidence
+  interval of {[}1.026 , 1.040{]}
+\item
+  1.077 for the Brookside neighorhood with a 95\% confidence interval of
+  {[}1.063 , 1.090{]}
+\end{itemize}
+
+Since the sampling procedure is not known and this is an observational
+study, the results only apply to this data.
 
 \hypertarget{conclusion}{%
 \subsection{Conclusion}\label{conclusion}}
@@ -249,9 +316,9 @@ Restatement of the problem
 
 Type of selection
 
-\hypertarget{model-assumption-assessment-1}{%
+\hypertarget{model-assumption-assessment}{%
 \subsection{Model Assumption
-Assessment}\label{model-assumption-assessment-1}}
+Assessment}\label{model-assumption-assessment}}
 
 Address each assumption
 
